--- a/index.html
+++ b/index.html
@@ -1,4 +1,42 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+        <meta charset="UTF-8">
+        <meta name="Description" content="Starting new Journey">
+        <title> Assignmnet # 01</title>
+    </head>
+    <body>
+        <h1> Main Heading</h1>
+        <h2> Sub-heading</h2>
+        <h3> Another Subheading</h3>
+        <p> Paraghraphs</p>
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li> Item 3</li>
+        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th> First Name </th>
+                    <th> Last Name </th>
+                    <th>  Country</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td> Aqeel</td>
+                    <td> Zakir</td>
+                    <td> Pakistan</td>
+            
+                </tr>
+                <tr>
+                <td> Nabeel</td>
+                <td> Zakir</td>
+                <td> Kashmir</td>
+                </tr>
+
+            </tbody>
+        </table>
+    </body>
 </html>
